--- a/src/main/webapp/app/entities/person/person-dialog.component.html
+++ b/src/main/webapp/app/entities/person/person-dialog.component.html
@@ -39,6 +39,11 @@
                   />
             </div>
         </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_distanceMax">Distance Max</label>
+            <input type="number" class="form-control" name="distanceMax" id="field_distanceMax"
+                [(ngModel)]="person.distanceMax"  />
+        </div>
 
         <div class="form-group">
             <label class="form-control-label" for="field_currentPlace">Current Place</label>
