--- a/src/main/webapp/app/entities/person/person-detail.component.html
+++ b/src/main/webapp/app/entities/person/person-detail.component.html
@@ -24,6 +24,10 @@
         <dd>
             <span>{{person.birthDate | date:'medium'}}</span>
         </dd>
+        <dt><span>Distance Max</span></dt>
+        <dd>
+            <span>{{person.distanceMax}}</span>
+        </dd>
         <dt><span>Current Place</span></dt>
         <dd>
             <div *ngIf="person.currentPlaceId">
