place test null pointer exception autowired

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -38,5 +38,6 @@
         <p>
             <span>If you like Week&Go, don't forget to give us a star on</span> <a href="https://github.com/julespaget/projetTAA.git" target="_blank" rel="noopener">GitHub</a>!
         </p>
+        <button (click)="clickTest()">Test</button>
     </div>
 </div>
